# Graduation_AQA

./: .env  .env.bs  .env.local  README.md  config.py  pyproject.toml  pytest.ini
superjob_project/data/api/: schemas.py
superjob_project/data/ui/: users.py
superjob_project/pages/mobile/: auth_page.py  base_page.py
superjob_project/pages/ui/: account_page.py  base_page.py
superjob_project/schemas/: schemas.py
superjob_project/utils/: attach.py  base_requests.py  cookies.txt  file.py  logging_helper.py
tests/api/: conftest.py  test_api_sj_expectedly_incorrect.py  test_api_sj_user.py  test_api_sj_vacancy_list.py  test_expectedly_incorrect_data.py  test_requests_vacancy.py  test_reset_user_password.py
tests/mobile/: conftest.py  test_with_authorisation.py  test_without_authorisation.py
tests/mobile/allure-results/: 037b0a8e-9855-4ccc-bf82-482f219dd0b9-result.json  6853e4fa-7adf-4c81-b21f-6a88aa99136a-container.json  6f6b585b-30bc-4783-b3db-de2d75a630a3-container.json  a52b59d1-10bc-49ff-a967-8cd514b4482f-container.json
tests/ui/: conftest.py  test_authorization.py  test_base_search.py
tests/ui/allure-results/: 31ff8cb5-e455-4b6c-acb0-b40d39dbc413-container.json  58c28389-06c9-423f-ae96-525ac93b966c-result.json  ac9dbcc1-22c5-454f-bf37-b8fbaec67b47-container.json  db3a2a56-a55b-4e63-a3ee-3496842af13f-attachment.txt
